@@ -413,8 +413,11 @@ clutter_event_peek (void)
  * clutter_event_put:
  * @event: a #ClutterEvent
  *
- * Puts a copy of the event on the back of the event queue.
- * The event will have the #CLUTTER_EVENT_FLAG_SYNTHETIC flag set. 
+ * Puts a copy of the event on the back of the event queue. The event will have
+ * the #CLUTTER_EVENT_FLAG_SYNTHETIC flag set. If the source is set event
+ * signals will be emitted for this source and capture/bubbling for it's
+ * ancestors. If the source is not set it will be generated by picking or use
+ * the actor that currently has keyboard focus.
  *
  * Since: 0.6
  */
