@@ -1,3 +1,10 @@
+2007-11-20  Øyvind Kolås  <pippin@o-hand.com>
+
+	* clutter/clutter-main.c: (clutter_do_event): avoid computing source
+	of events if it is already set (for synthetic events.)
+	* clutter/clutter-event.c: Add more information to the documentation
+	of clutter_event_put.
+
 2007-11-20  Emmanuele Bassi  <ebassi@openedhand.com>
 
 	* README: Add diff example command lines for submitting patches.
